# event-attendance-checker-admin-dashboard

./: .gitignore  README-BUILD.md  README.md  index.html  package-lock.json  package.json  vite.config.js
src/: App.jsx  index.css  index.css.bak  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/dev-ca/: aseado-ca.p12
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/windows/: hooks.nsh
src/api/: client.js
src/components/: IntroLoading.jsx  Modal.jsx  Sidebar.jsx  ThemeToggle.jsx  Topbar.jsx
src/hooks/: useScannerSocket.js  useTheme.js  useToasts.jsx
src/modals/: DeleteDeptConfirmModal.jsx  DeleteEventConfirmModal.jsx  DeleteProfileConfirmModal.jsx  DeleteStudentConfirmModal.jsx  DocsModal.jsx  ManualEntryModal.jsx  NewDeptTemplateModal.jsx  NewEventModal.jsx  NewProfileModal.jsx  NewStudentModal.jsx  ReportLinksModal.jsx  ResetProfileConfirmModal.jsx  StopConfirmModal.jsx  StudentStandingModal.jsx
src/pages/: Bootstrap.jsx  LicenceVerify.jsx  Login.jsx  Menu.jsx
src/theme/: ThemeContext.jsx
src/views/: CloudSyncView.jsx  DepartmentsView.jsx  EventsView.jsx  HistoryView.jsx  ImportView.jsx  MonitorView.jsx  RosterView.jsx  ScannerView.jsx  StandingView.jsx
