[package]
name = "aseado"
version = "1.0.0"
description = "ASEADO Event Attendance Admin"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
# "devtools" feature REMOVED — this is what compiles the inspector (F12 /
# Ctrl+Shift+I / right-click Inspect Element) out of the app entirely for
# release builds. If you need it back temporarily for your own debugging,
# add "devtools" back to the features list below and rebuild — just
# remember to remove it again before shipping to real users.
tauri = { version = "1", features = [ "process-relaunch", "window-unmaximize", "window-minimize", "window-set-fullscreen", "window-hide", "window-close", "window-set-focus", "window-show", "window-start-dragging", "window-maximize", "shell-open", "dialog-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Used to wait for the backend's port to open before showing the window,
# instead of guessing with a fixed sleep.
reqwest = { version = "0.12", default-features = false, features = ["blocking"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
